# simple-python-api

./: .gitignore  README.md  app.py  pyproject.toml
app/: app.py
